fixed background image issue on mobile

--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -232,7 +232,6 @@
   body div.main-container-home {
     background-image: url('../img/about/ajPhotoFull.png');
     background-repeat: no-repeat;
-    background-position: 25% 25%;
     background-attachment: fixed;
     background-size: 150%;
   }
